infra/gateway/gw-euclid.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: euclid
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.1.201
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.euclid.stonegarden.dev"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-euclid
      allowedRoutes:
        namespaces:
          from: All
